test-suite/cases/eure-schema-to-json-schema/errors/non-string-map-keys.eure
// Test error: Map with non-string keys cannot be converted to JSON Schema
// JSON Schema only supports string keys in additionalProperties

schema = ```eure
$variant = "map"
key = `integer`
value = `text`
```

json_schema_errors[] = "Eure Map with non-string keys cannot be represented in JSON Schema"
